Safari overflow fix

--- a/src/components/Pages/HomePage/NavBar/Navbar.css
+++ b/src/components/Pages/HomePage/NavBar/Navbar.css
@@ -103,7 +103,7 @@
     position: sticky;
     top: 0;
     z-index: 1;
-    padding-top: 0;
+    padding-top: 1rem;
     background-color: rgba(18, 18, 18, 0.95);
     backdrop-filter: blur(5px);
   }
